realigned clipboard button

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/tabbit.css">
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono|Source+Code+Pro|Cousine|Carme|Anonymous+Pro' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" type="text/css" href="./js/highlightjs/styles/monokai_sublime.css">
+	<link rel="stylesheet" type="text/css" href="./js/highlightjs/styles/monokai_sublime.css"> <!--github-->
 
 	<script src='./js/jquery.js'></script>
 	<script src="./js/highlightjs/highlight.pack.js"></script>
