--- a/templates/view.html
+++ b/templates/view.html
@@ -30,7 +30,8 @@
 
 		
 		<a class="button" id="reply">reply</a>
-		<a id='button-clipboard' alt='copy to clipboard' title='copy to clipboard'></a>
+		<a class="button" id='button-clipboard'></a>
+		
 		
 
 
