--- a/server/views/new.html
+++ b/server/views/new.html
@@ -13,5 +13,11 @@
 
   <input type="text" id="fake" /><!-- minimal captcha -->
   <input type="submit" value="paste" />
+  <div id="username">
+    <label>
+      post as
+      <input type="text"  maxlength=15 id='author' />
+      </label>
+  </div>
 </form>
 {% endblock %}
