--- a/src/css/tabbit.styl
+++ b/src/css/tabbit.styl
@@ -100,6 +100,18 @@ main
       &:hover
         background #444
         border-color #222
+    div#username
+      display inline-block
+      float right
+      margin 15px 0
+      input
+        background none
+        border none
+        border-bottom 1px solid rgba(0,0,0,0.1)
+        color#ff8272
+        font-weight bold
+        letter-spacing 2px
+        padding 0 0 0 6px
 
 
   #pastes-container
@@ -189,7 +201,6 @@ main
     overflow auto
     table
       width 100%
-
       /* line numbers td */
       td:first-of-type
         width 16px
@@ -218,7 +229,6 @@ main
       //max-width 893px
       overflow-x auto
       position relative
-
       li
         float left
         list-style none
@@ -227,7 +237,6 @@ main
         font-size 12px
         padding 0px 10px
         color rgb(74, 113, 173)
-
         &:hover
           display inline-block
           background rgba(209, 93, 93, 0.13)
