--- a/server/views/base.html
+++ b/server/views/base.html
@@ -6,11 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tabbit - pastebin with tabs</title>
     <meta name="description" content="pastebin with tabs">
-    <link rel="stylesheet" type="text/css" href="css/tabbit.css">
-    <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono|Source+Code+Pro|Cousine|Carme|Anonymous+Pro' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="./css/tabbit.css">
 </head>
-
-
 
 <body>
 
@@ -44,7 +41,7 @@
 
     </main>
 
-
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono|Source+Code+Pro|Cousine|Carme|Anonymous+Pro' rel='stylesheet' type='text/css'>
     <script src='./js/jquery.js'></script>
     <script src="./js/tabbit.js"></script>
   </body>
