--- a/server/views/entry.html
+++ b/server/views/entry.html
@@ -139,7 +139,7 @@ where we load content from the dataStorage.
   // change theme colors based on time
   var date = new Date()
 
-  var theme = date.getHours() >= 20 || date.getHours() <= 8 ? 'monokai_sublime' : '_github'
+  var theme = date.getHours() >= 20 || date.getHours() <= 8 ? 'rainbow' : '_github'
   var head  = document.getElementsByTagName('head')[0];
   var link  = document.createElement('link');
   link.rel  = 'stylesheet';
