--- a/src/css/tabbit.styl
+++ b/src/css/tabbit.styl
@@ -118,6 +118,14 @@ main
     display block
     position relative
 
+    #filter-author
+      clear both
+      float right
+      background-color rgba(255,255,255,0.5)
+      border 1px solid rgba(0,0,0,0.2)
+      margin-bottom 10px
+      padding 5px
+
     // Clipboard button
     // Initial display none. When it's ready, js shows it
     #button-clipboard
@@ -199,6 +207,7 @@ main
     font-family 'Source Code Pro', sans-serif
     position relative
     overflow auto
+    clear both
     table
       width 100%
       /* line numbers td */
