--- a/server/views/entry.html
+++ b/server/views/entry.html
@@ -2,6 +2,22 @@
 
 {% extends './base.html' %}
 
+
+<script>
+// change theme colors based on time
+  var date = new Date()
+  var theme = date.getHours() >= 20 || date.getHours() <= 8 ? 'rainbow' : '_github'
+  var head  = document.getElementsByTagName('head')[0];
+  var link  = document.createElement('link');
+  link.rel  = 'stylesheet';
+  link.type = 'text/css';
+  link.href = './js/highlightjs/styles/' + theme + '.css';
+  head.appendChild(link);
+</script>
+
+
+
+
 {% block entry %}
   <ul class="tabs">
     {% for tab in doc.tabs %}
@@ -138,7 +154,6 @@ where we load content from the dataStorage.
 
   // change theme colors based on time
   var date = new Date()
-
   var theme = date.getHours() >= 20 || date.getHours() <= 8 ? 'rainbow' : '_github'
   var head  = document.getElementsByTagName('head')[0];
   var link  = document.createElement('link');
