--- a/server/views/entry.html
+++ b/server/views/entry.html
@@ -2,22 +2,6 @@
 
 {% extends './base.html' %}
 
-
-<script>
-// change theme colors based on time
-  var date = new Date()
-  var theme = date.getHours() >= 20 || date.getHours() <= 8 ? 'rainbow' : '_github'
-  var head  = document.getElementsByTagName('head')[0];
-  var link  = document.createElement('link');
-  link.rel  = 'stylesheet';
-  link.type = 'text/css';
-  link.href = './js/highlightjs/styles/' + theme + '.css';
-  head.appendChild(link);
-</script>
-
-
-
-
 {% block entry %}
   <ul class="tabs">
     {% for tab in doc.tabs %}
@@ -126,23 +110,33 @@ where we load content from the dataStorage.
     })
     var copyresult;
 
-    ZeroClipboard.on("copy", function(event) {
+     ZeroClipboard.on("copy", function(event) {
       var $table = $('table').filter(':visible')
-      var tableIndex, entry
-      var clipboard = event.clipboardData;
 
-      tableIndex = $table.index()
       try {
         entry = JSON.parse($('#original').text().trim())
+        var clipboardText = entry.pastes[$table.index()]
+        event.clipboardData.setData("text/plain", clipboardText)
+        $table.find('.paste-overlay')
+          .addClass('overlay-success')
+          .css('z-index', '2')
+          .fadeIn(100, function() {
+            $(this).fadeOut()
+          })
       } catch (e) {
         console.log('error: ', e)
-        copyresult = true
+        $table.find('.paste-overlay')
+          .addClass('overlay-error')
+          .css('z-index', '2')
+          .fadeIn(100, function() {
+            $(this).fadeOut()
+          })
       }
-      clipboard.setData("text/plain", 'z')
+
     })
 
    /* client.on( "aftercopy", function(event) {
-      var c = copyresult ? 'overlay-error' : 'overlay-success'
+      var c = copyresult ? 'overlay-error' :
       $('table').filter(':visible')
       .find('.paste-overlay').addClass(c)
       .css('z-index', '2')
@@ -152,15 +146,7 @@ where we load content from the dataStorage.
     });*/
   }
 
-  // change theme colors based on time
-  var date = new Date()
-  var theme = date.getHours() >= 20 || date.getHours() <= 8 ? 'rainbow' : '_github'
-  var head  = document.getElementsByTagName('head')[0];
-  var link  = document.createElement('link');
-  link.rel  = 'stylesheet';
-  link.type = 'text/css';
-  link.href = './js/highlightjs/styles/' + theme + '.css';
-  head.appendChild(link);
+
 </script>
 
 
