--- a/server/views/entry.html
+++ b/server/views/entry.html
@@ -79,7 +79,7 @@ where we load content from the dataStorage.
 
 <script src='./js/zeroclipboard/ZeroClipboard.min.js'></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/highlight.min.js"></script>
-
+<link rel="stylesheet" href="./js/highlightjs/styles/_github.css">
 <script>
   var preTags = document.querySelectorAll("pre")
   Array.prototype.forEach.call(preTags, hljs.highlightBlock);
